# white-ops

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_tool.md
.github/workflows/: ci.yml
deploy/helm/white-ops/: Chart.yaml  values.yaml
deploy/helm/white-ops/templates/: _helpers.tpl  configmap.yaml  deployments.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  serviceaccount.yaml  services.yaml  statefulsets.yaml
docs/: admin-panel.md  api-reference.md  architecture.md  contributing.md  deployment.md  getting-started.md  security.md  tools-guide.md
mail/: Dockerfile  server.py
monitoring/grafana/dashboards/: whiteops-overview.json
monitoring/prometheus/: alert.rules.yml  prometheus.yml
scripts/: add-worker.sh  backup-cron.sh  pre-deploy-check.sh  setup.sh
server/: .dockerignore  Dockerfile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py
server/app/: config.py  main.py
server/app/api/: websocket.py
server/app/api/v1/: admin.py  agents.py  analytics.py  approvals.py  auth.py  chat.py  circuit_breakers.py  code_reviews.py  collaboration.py  cost.py  dashboard.py  dead_letter.py  exports.py  files.py  knowledge.py  marketplace.py  memories.py  messages.py  notifications.py  schedules.py  secrets.py  security.py  settings.py  ssh_connections.py  tasks.py  triggers.py  webhooks.py  workers.py  workflows.py
server/app/core/: auth.py  errors.py  logging.py  middleware.py  permissions.py  security.py
server/app/db/: init_db.py  session.py
server/app/models/: __init__.py  agent.py  audit.py  base.py  code_review.py  conversation.py  cost.py  file.py  memory.py  message.py  notification.py  secret.py  security.py  settings.py  task.py  template.py  trigger.py  user.py  webhook.py  worker.py  workflow.py
server/app/schemas/: agent.py  auth.py  task.py
server/app/services/: audit.py  circuit_breaker.py  cost_tracker.py  memory_service.py  notification_service.py  orchestrator.py  storage.py  task_queue.py  trigger_engine.py  vault.py  workflow_engine.py
server/tests/: conftest.py  test_api.py  test_auth.py  test_health.py  test_middleware.py  test_security.py  test_vault.py
web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  endpoints.ts  mock.ts
web/src/components/agent/: AutonomyConfig.tsx
web/src/components/layout/: GlobalSearch.tsx  Layout.tsx  NotificationCenter.tsx
web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  DataTable.tsx  DemoBanner.tsx  EmptyState.tsx  ErrorBoundary.tsx  Modal.tsx  QueryError.tsx  Skeleton.tsx  StatusIndicator.tsx  Tabs.tsx  ThemeToggle.tsx  index.ts
web/src/components/ui/__tests__/: ErrorBoundary.test.tsx  QueryError.test.tsx
web/src/hooks/: useDarkMode.ts  useKeyboardShortcuts.ts  useNotifications.ts  useWebSocket.ts
web/src/i18n/: en.json  tr.json
web/src/lib/: types.ts  utils.ts  websocket.ts
web/src/pages/: ActivityFeed.tsx  AgentChat.tsx  AgentDetail.tsx  AgentMemory.tsx  AgentPresets.tsx  Agents.tsx  Analytics.tsx  Approvals.tsx  AuditLog.tsx  CircuitBreakers.tsx  CodeReview.tsx  Collaboration.tsx  CostDashboard.tsx  Dashboard.tsx  DeadLetterQueue.tsx  Files.tsx  Knowledge.tsx  LiveTerminal.tsx  Login.tsx  Marketplace.tsx  Messages.tsx  NotFound.tsx  NotificationCenter.tsx  SSHConnections.tsx  ScheduledTasks.tsx  Secrets.tsx  SecuritySettings.tsx  Settings.tsx  SetupWizard.tsx  TaskDetail.tsx  TaskTemplates.tsx  Tasks.tsx  Triggers.tsx  UserManagement.tsx  Workers.tsx  WorkflowBuilder.tsx  Workflows.tsx
web/src/pages/__tests__/: NotFound.test.tsx
web/src/stores/: authStore.ts  themeStore.ts
web/src/stores/__tests__/: authStore.test.ts
web/src/test/: setup.ts
worker/: .dockerignore  Dockerfile  pyproject.toml
worker/agent/: config.py  executor.py  main.py
worker/agent/llm/: provider.py
worker/agent/tools/: base.py  registry.py
worker/agent/tools/business/: contract_generator.py  crm.py  expense_report.py  inventory.py  invoice.py  project_tracker.py  task_tracker.py  time_tracker.py
worker/agent/tools/cloud/: azure.py  gcp.py
worker/agent/tools/communication/: calendar.py  discord_bot.py  email_ext.py  email_int.py  notification.py  sms.py  teams.py
worker/agent/tools/data/: analysis.py  cleaning.py  converter.py  database.py  reporter.py  visualization.py
worker/agent/tools/devops/: ci_cd.py  terraform.py
worker/agent/tools/filesystem/: backup.py  cloud_storage.py  file_manager.py  image.py  ocr.py
worker/agent/tools/finance/: bookkeeping.py  currency.py  tax_calculator.py
worker/agent/tools/hr/: employee_directory.py  leave_manager.py  payroll.py
worker/agent/tools/integrations/: github_integration.py  google_workspace.py  jira.py  notion.py  slack.py  telegram.py  webhook.py
worker/agent/tools/monitoring/: health_checker.py  prometheus_query.py
worker/agent/tools/office/: excel.py  form_builder.py  notes.py  pdf.py  powerpoint.py  word.py
worker/agent/tools/research/: browser.py  rss.py  scraper.py  search.py  summarizer.py  translator.py
worker/agent/tools/security_tools/: secret_scanner.py
worker/agent/tools/technical/: api_caller.py  claude_code_bridge.py  code_exec.py  code_review.py  docker_ops.py  git_ops.py  shell.py
worker/tests/: test_security_tools.py  test_tools.py
