[project]
name = "whiteops-worker"
version = "1.0.0"
description = "White-Ops Enterprise Agent Worker - AI Task Executor"
requires-python = ">=3.12"
dependencies = [
    # HTTP & networking
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",

    # LLM providers
    "litellm>=1.50.0",

    # Config & validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Logging & monitoring
    "structlog>=24.4.0",
    "tenacity>=9.0.0",

    # Office document tools
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "pypdf>=5.1.0",
    "reportlab>=4.2.0",

    # Browser & web scraping
    "playwright>=1.49.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "feedparser>=6.0.0",

    # Data analysis & visualization
    "matplotlib>=3.9.0",
    "plotly>=5.24.0",
    "seaborn>=0.13.0",

    # Image processing
    "Pillow>=11.0.0",

    # File storage
    "minio>=7.2.0",

    # Email
    "aiosmtplib>=3.0.0",
    "aioimaplib>=2.0.0",

    # Database (for database tool)
    "asyncpg>=0.30.0",

    # Data formats
    "pyarrow>=18.0.0",
    "pyyaml>=6.0.0",

    # System info
    "psutil>=6.1.0",
    "aiofiles>=24.1.0",

    # Cloud providers
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B"]
ignore = [
    "E501",  # line too long (existing codebase; enforced by formatter)
    "S101",  # assert in tests
    "S104",  # binding to all interfaces
    "S108",  # hardcoded /tmp paths (intentional for sandbox)
    "S110",  # try-except-pass (intentional fallback)
    "S603",  # subprocess calls (legitimate in shell/code_exec tools)
    "S607",  # partial executable path
    "B007",  # unused loop variable (common in iteration patterns)
    "B904",  # raise from (pre-existing; defer to cleanup sprint)
    "N803",  # argument name casing (external API parameter names)
    "F841",  # unused variable (pre-existing; defer to cleanup sprint)
    "E741",  # ambiguous variable name (pre-existing single-char loop vars)
    "N806",  # variable casing (PowerPoint API uses camelCase)
    "S112",  # try-except-continue (intentional skip pattern in scanners)
    "S314",  # xml.etree (RSS parsing; defusedxml is overkill for read-only feeds)
    "F401",  # unused import (asyncpg availability check pattern)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=agent --cov-report=term-missing"
